--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build": "webpack",
-    "dist": "electron-builder"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
